--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="home__pictures">
           <img class="home__desktop" src="./images/title.jpg" alt="Portret" width="940" height="387"/>
-          <img class="home__adaptive" src="./images/title_bigPhoto.jpg" alt="Portret" />
+          <img class="home__adaptive" src="./images/title_mobile.png" alt="Portret" />
         </div>
       </div>
     </section>
