--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <div class="container">
       <nav class="nav">
         <ul class="nav__list">
-          <li><a href="#" class="nav__link">Home</a></li>
-          <li><a href="#" class="nav__link">About me</a></li>
-          <li><a href="#" class="nav__link">Skills</a></li>
-          <li><a href="#" class="nav__link">Portfolio</a></li>
-          <li><a href="#" class="nav__link">Contacts</a></li>
+          <li><a href="#Home" class="nav__link">Home</a></li>
+          <li><a href="#About" class="nav__link">About me</a></li>
+          <li><a href="#Skills" class="nav__link">Skills</a></li>
+          <li><a href="#Portfolio" class="nav__link">Portfolio</a></li>
+          <li><a href="#Contacts" class="nav__link">Contacts</a></li>
         </ul>
       </nav>
     </div>
   </header>
   <main>  
-    <section class="home">
+    <section id="Home" class="home">
       <div class="container">
         <div class="home__top">
           <h1 class="home__title">Denis Novik</h1>
@@ -34,7 +34,7 @@
         </div>
       </div>
     </section>
-    <section class="about">
+    <section id="About" class="about">
       <div class="container">
         <h2 class="title about__title">About me</h2>
         <div class="about__info">
@@ -44,7 +44,7 @@
         </div>
       </div>
     </section>
-    <section class="skills">
+    <section id="Skills" class="skills">
       <div class="container">
         <h2 class="title skills__title">Skills</h2>
         <p class="skills__subtitle">I work in such programs as</p>
@@ -96,7 +96,7 @@
         </div>
       </div>
     </section>
-    <section class="portfolio">
+    <section id="Portfolio" class="portfolio">
       <div class="container">
         <h2 class="title portfolio__title">Portfolio</h2>
         <div class="portfolio__case">
@@ -115,7 +115,7 @@
     </section>
   </main>
 
-  <footer class="contacts">
+  <footer id="Contacts" class="contacts">
     <div class="container">
       <h2 class="title contacts__title">Contacts</h2>
       <p class="contacts__subtitle">Want to know more or just chat? You are welcome!</p>
