--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <p class="home__info">UX | UI designer <br /> 24 years old, Minsk</p>
         </div>
         <div class="home__pictures">
-          <img class="home__desktop" src="./images/title.jpg" alt="Portret" width="940" height="387"/>
+          <img class="home__desktop" src="./images/title.jpg" alt="Portret" />
           <img class="home__adaptive" src="./images/title_mobile.png" alt="Portret" />
         </div>
       </div>
