--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
         </ul>
       </nav>
     </div>
+      <nav class="nav__burger">
+        <input class="nav__burgerCheck" type="checkbox">
+        <span class="nav__burgerLine"></span>
+        <ul class="nav__burgerList">
+          <li><a class="nav__burgerLink" href="#Home">Home</a></li>
+          <li><a class="nav__burgerLink"  href="#About">About me</a></li>
+          <li><a class="nav__burgerLink"  href="#Skills">Skills</a></li>
+          <li><a class="nav__burgerLink"  href="#Portfolio">Portfolio</a></li>
+          <li><a class="nav__burgerLink" href="#Contacts">Contacts</a></li>
+        </ul>
+      </nav>
   </header>
   <main>  
     <section id="Home" class="home">
