--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <nav class="nav__burger">
         <input class="nav__burgerCheck" type="checkbox">
         <span class="nav__burgerLine"></span>
+        <span class="nav__burgerLine"></span>
+        <span class="nav__burgerLine"></span>
         <ul class="nav__burgerList">
           <li><a class="nav__burgerLink" href="#Home">Home</a></li>
           <li><a class="nav__burgerLink"  href="#About">About me</a></li>
